# KillShengci

./: .gitignore  Cargo.toml  README.org  create_table.sql  demo.sql  dict.db
src/: app.rs  db_manage.rs  dict_manage.rs  dictcn.rs  lib.rs  main.rs  new_ui.rs  shengci_app.rs  test.rs  word.rs
