[package]
name = "kill-shengci"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version="0.11.7", features=["blocking"]}
tokio  = {version="1",features=["full"]}
select = "0.5.0"
urlencoding = "2.1.0"
serde_json = "1.0"
serde = {version="1.0.131", features=["derive"]}
eframe = { git = "https://github.com/emilk/egui", branch = "master" ,features=["default_fonts","egui_glow"]}
rusqlite = "0.26.3"
regex = "*"
